# geometroid

./: .editorconfig  .gitignore  Cargo.toml  build-config.yml  build.rs
assets/shaders/: shader.vert  unlit.hlsl
src/: common.rs  helpers.rs  main.rs
src/engine/: array_util.rs  context.rs  debug.rs  inputs.rs  math.rs  memory.rs  mesh_builder.rs  mod.rs  physical_devices.rs  render.rs  render_params.rs  shader_utils.rs  shapes.rs  surface.rs  swapchain.rs  swapchain_wrapper.rs  texture.rs  uniform_buffer_object.rs  utils.rs
src/engine/render/: mod.rs  render_desc.rs  render_pipeline.rs
src/shaders/: compile.bat  compile.ps1  shader.frag  shader.vert
src/ui/: mod.rs
