[package]
name = "geometroid"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-window = "0.12.0"
raw-window-handle = "0.5"
winit = "0.27.5"
cgmath = "0.18.0"
log = "0.4"
env_logger = "0.9"
memoffset = "0.7.1"
image = "0.24.2"
tobj = "3.2.3"

[build-dependencies]
yaml-rust2 = "0.7.0"
