[package]
name = "geometroid"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"]}
ash = "0.38.0"
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
cgmath = "0.18.0"
log = "0.4.22"
env_logger = "0.11.5"
memoffset = "0.9.1"
image = "0.25.2"
tobj = "4.0.2"

[build-dependencies]
yaml-rust2 = "0.8.0"
