[package]
name = "geometroid"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30"
ash = "0.38.0"
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
log = "0.4.22"
env_logger = "0.11.5"
memoffset = "0.9.1"
image = "0.25.2"
tobj = "4.0.2"
chrono = "0.4.38"
nalgebra = "0.33.0"
nalgebra-glm = "0.19.0"
egui = "0.29.1"
egui-ash-renderer = "0.6.0"
egui-winit = "0.29.1"

[build-dependencies]
yaml-rust2 = "0.9.0"
